--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"webpack": "webpack -- watch",
-		"build": "webpack"
+		"build": "webpack",
+		"start:dev": "npx wepback serve"
 	},
 	"repository": {
 		"type": "git",
@@ -23,11 +24,12 @@
 		"file-loader": "^6.2.0",
 		"webpack": "^5.27.2",
 		"webpack-bundle-analyzer": "^4.4.0",
-		"webpack-cli": "^4.5.0"
+		"webpack-cli": "^4.5.0",
+		"webpack-dev-server": "^3.11.2",
+		"image-webpack-loader": "^7.0.1"
 	},
 	"dependencies": {
 		"bootstrap": "^4.6.0",
-		"image-webpack-loader": "^7.0.1",
 		"jquery": "^3.6.0",
 		"popper.js": "^1.16.1"
 	}
