--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"webpack": "webpack -- watch",
 		"build": "webpack",
-		"start:dev": "npx wepback serve"
+		"start:dev": "wepback serve"
 	},
 	"repository": {
 		"type": "git",
@@ -22,11 +22,12 @@
 	"homepage": "https://github.com/gavin-asay/food-festival#readme",
 	"devDependencies": {
 		"file-loader": "^6.2.0",
+		"image-webpack-loader": "^7.0.1",
 		"webpack": "^5.27.2",
 		"webpack-bundle-analyzer": "^4.4.0",
 		"webpack-cli": "^4.5.0",
 		"webpack-dev-server": "^3.11.2",
-		"image-webpack-loader": "^7.0.1"
+		"webpack-pwa-manifest": "^4.3.0"
 	},
 	"dependencies": {
 		"bootstrap": "^4.6.0",
